# genealgolib

./: Cargo.toml  LICENSE  README.md  benchmark.py  pyproject.toml  test.py
.github/workflows/: CI.yml
src/: lib.rs
