[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "genealgolib"
version = "0.1.0"
description = "A high-performance genetic algorithm library implemented in Rust with Python bindings"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Arun Hariharan", email = "r.arunhariharan@gmail.com"}
]
keywords = ["genetic-algorithm", "optimization", "rust", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/SunOrangeBurger/genealgolib"
Repository = "https://github.com/SunOrangeBurger/genealgolib"
Issues = "https://github.com/SunOrangeBurger/genealgolib/issues"

[project.optional-dependencies]
dev = ["numpy", "pytest"]
